update validation input from record

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                             <div class="col-6 form-group">
                                 <label for="">Khóa học: </label>
                                 <select name="" id="khSV" class="form-control">
-                                    <option>Chọn khóa học</option>
-                                    <option>KH001</option>
-                                    <option>KH002</option>
+                                    <option value="">Chọn khóa học</option>
+                                    <option value="KH001">KH001</option>
+                                    <option value="KH002">KH002</option>
                                 </select>
                                 <span
                                     id="spanKhoaHoc"
