--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     type="text"
                                     class="form-control"
                                     id="txtTenSV"
-                                    data-validation="doDai"
+                                    data-validation="doDaiTen"
                                 />
                                 <span id="spanTenSV" class="text-danger"></span>
                             </div>
